apps/bdo/src/app/main/main.component.scss
@import '../../theme/variables.scss';

.main-navbar {
  color: $white;
  position: fixed;
  z-index: 9999;
  display: flex;
  flex-direction: column;
  padding: 0;
  top: 0;

  .logo {
    min-height: 64px;
    display: flex;
    width: 100%;
    flex-direction: row;
    padding-left: 20px;
    justify-content: flex-start;
    align-items: center;
    background: $main-blue;
    img {
      cursor: pointer;
    }
  }

  .back-button {
    padding: 0;
    font-size: 16px;

    mat-icon {
      transform: scaleY(1.3);
    }
  }
}

.main-navbar-content {
  z-index: 9999;
}

.main-content {
  margin-top: 96px;
  padding: 8px 0;
}

.main-content-exclude-search-navbar {
  margin-top: 56px;
  padding: 8px 0;
}

.side-nav {
  position: fixed;
  margin-top: 56px;
}



@media screen and (min-width: $desktop-width) {
  .main-content {
    margin: auto;
    width: $desktop-width;
    margin-top: 96px;
    padding: 8px 0;
  }

  .nearby-page {
    width: 100%;
    margin-top: 96px;
    padding: 8px 0;
  }

  .main-navbar-content {
    width: $desktop-width;
    margin: auto;
    display: flex;
    flex-direction: row;

    .logo {
      flex: 1;
      width: unset;
    }

    .search-wrapper {
      width: 800px;
      align-self: center;
    }
  }
}

